# Wordle-Console-Clone

./: .gitignore  CMakeLists.txt  README.md  dictionary.h  getopt.c  getopt.h  main.c  wordle_board.h
Wordle/: CMakeLists.txt  dictionary.c  dictionary.h  getopt.h  wordle_board.c  wordle_board.h
Wordle-CPP-Console/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  getopt.c  main.cpp  wordle_board.cpp  wordle_board.hpp
Wordle-CS-Console/: Board.cs  Dictionary.cs  README.md  Wordle-CS-Console.csproj  Wordle.cs
